[package]
name = "domin8-mvp"
version = "0.1.0"
description = "Domin8 MVP - Clean battle royale betting game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "domin8_mvp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
orao-solana-vrf = { version = "0.6.1", default-features = false, features = ["cpi"] }
