[package]
name = "domin8_prgm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "domin8_prgm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
# Note: For Phase 5, we implement a simplified VRF pattern using commit-reveal
# In production, you would add: switchboard-on-demand = { version = "0.1.0", features = ["anchor"] }

